:wrench: Update configuration to connect db

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoConnection": {
+    "ConnectionStrings": "*"
+  },
+  "DBName": "findrestaurant",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
